--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "beyondcode/laravel-websockets": "^1.14",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
@@ -14,6 +15,7 @@
         "laravel/ui": "^4.2",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "^3.0",
+        "pusher/pusher-php-server": "^7.2",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
