--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "history": "^5.3.0",
+    "laravel-echo": "^1.15.3",
     "postcss": "^8.4.27",
+    "pusher-js": "^8.3.0",
     "react-router-dom": "^6.14.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
