--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,19 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^4.32.0",
+    "axios-mock-adapter": "^1.22.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "vitest": "^0.34.6"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.25",
@@ -34,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "history": "^5.3.0",
+    "jest-localstorage-mock": "^2.4.26",
     "laravel-echo": "^1.15.3",
     "postcss": "^8.4.27",
     "pusher-js": "^8.3.0",
